--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -506,8 +506,23 @@
         </trans-unit>
         <trans-unit id="NotModified" translate="yes" xml:space="preserve">
           <source>Not modified</source>
-          <target state="new">Not modified</target>
+          <target state="translated">Non modificato</target>
           <note from="MultilingualBuild" annotates="source" priority="2">Renamed name is the same as the original</note>
+        </trans-unit>
+        <trans-unit id="DevMessage" translate="yes" xml:space="preserve">
+          <source>Developer message</source>
+          <target state="translated">Messaggio dello sviluppatore</target>
+        </trans-unit>
+        <trans-unit id="WelcomeText" translate="yes" xml:space="preserve">
+          <source>Welcome to Brainf*ck#!
+Thank you for downloading the app, I hope you'll enjoy using it!
+Please feel free to send me an email if you have suggestions or feedback, or if you found a bug, and I'll be happy to help.
+
+NOTE: the app might sometimes crash when using the virtual arrows keypad in the IDE or when loading a source code. That's due to a bug in one of the controls I'm using, I've already sent a feedback to Microsoft and hopefully that'll get fixed soon!</source>
+          <target state="translated">Benvenuti in Brainf*ck#, grazie di aver scaricato quest'app!
+Potete mandarmi un messaggio email in qualsiasi momento se avete suggerimenti o feedback, o se avete trovato un bug, e sarò felice di aiutare.
+
+NOTA: l'app potrebbe occasionalmente chiudersi usando il cursore virtuale con le frecce di navigazione nell'IDE o durante il caricamento di un codice sorgente salvato. Questo è dovuto ad un bug in uno dei controlli che l'app utilizza, ho già mandato una segnalazione a Microsoft e spero che si possa risolvere il problema al più presto!</target>
         </trans-unit>
       </group>
     </body>
