--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -507,4 +507,10 @@ Please feel free to send me an email if you have suggestions or feedback, or if 
 
 NOTE: the app might sometimes crash when using the virtual arrows keypad in the IDE or when loading a source code. That's due to a bug in one of the controls I'm using, I've already sent a feedback to Microsoft and hopefully that'll get fixed soon!</value>
   </data>
+  <data name="AppBuildNumber.Text" xml:space="preserve">
+    <value>Build version</value>
+  </data>
+  <data name="ReleaseNotesBlock.Text" xml:space="preserve">
+    <value>Release notes</value>
+  </data>
 </root>
