--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -534,7 +534,11 @@ NOTA: l'app potrebbe occasionalmente chiudersi usando il cursore virtuale con le
         </trans-unit>
         <trans-unit id="ChangelogBlock.Text" translate="yes" xml:space="preserve">
           <source>Changelog</source>
-          <target state="new">Changelog</target>
+          <target state="translated">Novità</target>
+        </trans-unit>
+        <trans-unit id="Changelog" translate="yes" xml:space="preserve">
+          <source>Changelog</source>
+          <target state="translated">Novità</target>
         </trans-unit>
       </group>
     </body>
