--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -516,4 +516,7 @@ NOTE: the app might sometimes crash when using the virtual arrows keypad in the 
   <data name="ReleaseNotesBlock.Text" xml:space="preserve">
     <value>Release notes</value>
   </data>
+  <data name="Changelog" xml:space="preserve">
+    <value>Changelog</value>
+  </data>
 </root>
