Added IDE delete button

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -362,10 +362,6 @@
           <source>Redo</source>
           <target state="translated">Ripeti</target>
         </trans-unit>
-        <trans-unit id="UndoButton.Label" translate="yes" xml:space="preserve">
-          <source>Undo</source>
-          <target state="translated">Annulla</target>
-        </trans-unit>
         <trans-unit id="NewLineButton.Label" translate="yes" xml:space="preserve">
           <source>New line</source>
           <target state="translated">Nuova riga</target>
@@ -543,6 +539,10 @@ NOTA: l'app potrebbe occasionalmente chiudersi usando il cursore virtuale con le
         <trans-unit id="VirtualKeyboardButton.ToolTipService.ToolTip" translate="yes" xml:space="preserve">
           <source>Brainf*ck# operators keyboard</source>
           <target state="translated">Tastiera operatori Brainf*ck#</target>
+        </trans-unit>
+        <trans-unit id="DeleteButton.Label" translate="yes" xml:space="preserve">
+          <source>Delete</source>
+          <target state="translated">Cancella</target>
         </trans-unit>
       </group>
     </body>
