--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -399,9 +399,6 @@
   <data name="RedoButton.Label" xml:space="preserve">
     <value>Redo</value>
   </data>
-  <data name="UndoButton.Label" xml:space="preserve">
-    <value>Undo</value>
-  </data>
   <data name="MoveButtonmLabel" xml:space="preserve">
     <value>Move</value>
   </data>
@@ -521,5 +518,8 @@ NOTE: the app might sometimes crash when using the virtual arrows keypad in the 
   </data>
   <data name="VirtualKeyboardButton.ToolTipService.ToolTip" xml:space="preserve">
     <value>Brainf*ck# operators keyboard</value>
+  </data>
+  <data name="DeleteButton.Label" xml:space="preserve">
+    <value>Delete</value>
   </data>
 </root>
