--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -416,4 +416,7 @@ NOTA: l'app potrebbe occasionalmente chiudersi usando il cursore virtuale con le
   <data name="DeleteButton.Label" xml:space="preserve">
     <value>Cancella</value>
   </data>
+  <data name="OverflowSwitchButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Cambia modalità overflow</value>
+  </data>
 </root>
