--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -548,6 +548,14 @@ NOTA: l'app potrebbe occasionalmente chiudersi usando il cursore virtuale con le
           <source>Toggle overflow mode</source>
           <target state="translated">Cambia modalità overflow</target>
         </trans-unit>
+        <trans-unit id="OverflowMode" translate="yes" xml:space="preserve">
+          <source>Overflow mode</source>
+          <target state="translated">Modalità overflow</target>
+        </trans-unit>
+        <trans-unit id="OverflowModeBody" translate="yes" xml:space="preserve">
+          <source>You have enabled the byte overflow mode. This means that the maximum value of each memory cell will now be 255 and that increasing a cell over that value (or decreasing a cell that has a value equal to 0) will cause it to overflow, ie. if it's increased from 255 it will be set to 0, and if it's decreased from 0 it will reach 255.</source>
+          <target state="translated">Hai attivato la modalità byte overflow. Questo significa che il massimo valore di ogni cella di memoria sarà 255 e che incrementare una cella oltre quel valore (o decrementarla quando si trova già a 0) comporterà un overflow, cioè se a una cella viene aggiunto 1 da 255 verrà settata a 0, e se viene sottratto 1 da 0 raggiungerà il valore massimo di 255.</target>
+        </trans-unit>
       </group>
     </body>
   </file>
