--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -531,4 +531,35 @@ NOTE: the app might sometimes crash when using the virtual arrows keypad in the 
   <data name="OverflowModeBody" xml:space="preserve">
     <value>You have enabled the byte overflow mode. This means that the maximum value of each memory cell will now be 255 and that increasing a cell over that value (or decreasing a cell that has a value equal to 0) will cause it to overflow, ie. if it's increased from 255 it will be set to 0, and if it's decreased from 0 it will reach 255.</value>
   </data>
+  <data name="ARealNinjacat" xml:space="preserve">
+    <value>A real ninjacat!</value>
+  </data>
+  <data name="ARealNinjacatBody" xml:space="preserve">
+    <value>It's awesome to know you're having fun with the app so far!
+Would you like to post a review in the Store to support the developer?</value>
+  </data>
+  <data name="ConfirmBlock.Text" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="SendMail" xml:space="preserve">
+    <value>Send email</value>
+  </data>
+  <data name="SorryBody" xml:space="preserve">
+    <value>Would you like to contact the developer and send your feedback and let him know if you're having any problems in particular?
+This way he'll be able to help you!</value>
+  </data>
+  <data name="SorryTitle" xml:space="preserve">
+    <value>Sorry about that</value>
+  </data>
+  <data name="Sure" xml:space="preserve">
+    <value>Sure!</value>
+  </data>
+  <data name="ThankYouBlock1.Text" xml:space="preserve">
+    <value>Thank you for downloading</value>
+    <comment>This will be "Thank you for downloading Brainf*ck#!"</comment>
+  </data>
+  <data name="ThankYouBlock2.Text" xml:space="preserve">
+    <value>Are you enjoying it so far?</value>
+    <comment>It's talking about the app itself</comment>
+  </data>
 </root>
