--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -459,4 +459,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="Sure" xml:space="preserve">
     <value>Certo!</value>
   </data>
+  <data name="ToggleBlur.Label" xml:space="preserve">
+    <value>Cambia modalità blur</value>
+  </data>
 </root>
