--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -602,9 +602,13 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
           <source>Sure!</source>
           <target state="translated">Certo!</target>
         </trans-unit>
-        <trans-unit id="ToggleBlur.Label" translate="yes" xml:space="preserve">
-          <source>Toggle blur mode</source>
-          <target state="translated">Cambia modalità blur</target>
+        <trans-unit id="Settings" translate="yes" xml:space="preserve">
+          <source>Settings</source>
+          <target state="new">Settings</target>
+        </trans-unit>
+        <trans-unit id="SettingsButton.Label" translate="yes" xml:space="preserve">
+          <source>Settings</source>
+          <target state="new">Settings</target>
         </trans-unit>
       </group>
     </body>
